--- a/book/spanish/content/ch00-preface.html
+++ b/book/spanish/content/ch00-preface.html
@@ -1,15 +1,15 @@
 <section xmlns="http://www.w3.org/1999/xhtml" data-type="preface" id="preface">
 <h1 class="chapterhead">Prefacio</h1>
 
-<p class="lede">p5.js est&#xE1; inspirado y guiado por otro proyecto, que empez&#xF3; hace alrededor de 15 a&#xF1;os. En el a&#xF1;o 2001, Casey Reas y Ben Fry empezaron a trabajar en una nueva plataforma para hacer m&#xE1;s f&#xE1;cil la programaci&#xF3;n de gr&#xE1;ficos interactivos; la nombraron Processing. Ellos estaban frustrados con lo dif&#xED;cil que era escribir este tipo de software con los lenguajes que normalmente usaban (C++ y Java) y fueron inspirados por lo simple que era escribir programas interesantes con los lenguajes de su ni&#xF1;ez (Logo y BASIC). Su mayor influencia fue Design by Numbers (DBN), un lenguaje que ellos en ese tiempo estaban manteniendo y ense&#xF1;ando (y que fue creado por su tutor de investigaci&#xF3;n, John Maeda).</p>
+<p class="lede">p5.js est&#xE1; inspirado y guiado por otro proyecto, que empez&#xF3; hace alrededor de 15 a&#xF1;os. En el a&#xF1;o 2001, Casey Reas y Ben Fry empezaron a trabajar en una nueva plataforma para hacer m&#xE1;s f&#xE1;cil la programaci&#xF3;n de gr&#xE1;ficas interactivas; la nombraron Processing. Ellos estaban frustrados con lo dif&#xED;cil que era escribir este tipo de software con los lenguajes que normalmente usaban (C++ y Java) y fueron inspirados por lo simple que era escribir programas interesantes con los lenguajes de su ni&#xF1;ez (Logo y BASIC). Su mayor influencia fue Design by Numbers (DBN), un lenguaje que ellos en ese tiempo estaban manteniendo y ense&#xF1;ando (y que fue creado por su tutor de investigaci&#xF3;n, John Maeda).</p>
 
 <p>Con Processing, Ben y Casey estaban buscando una mejor manera de probar sus ideas f&#xE1;cilmente y en c&#xF3;digo, en vez de solamente conversar sobre ellas o pasar demasiado tiempo program&#xE1;ndolas en C++. Su otro objetivo fue construir un lenguaje para ense&#xF1;ar programaci&#xF3;n a estudiantes de dise&#xF1;o y de arte y ofrecerle a estudiantes m&#xE1;s avanzados una manera m&#xE1;s f&#xE1;cil de trabajar con gr&#xE1;ficas. Esta combinaci&#xF3;n es una desviaci&#xF3;n positiva de la manera en que usualmente se ense&#xF1;a programaci&#xF3;n. Los nuevos usuarios empiezan concentr&#xE1;ndose en gr&#xE1;ficos e interacci&#xF3;n en vez de estructuras de datos y resultados en forma de texto en la consola.</p>
 
 <p>A trav&#xE9;s de los a&#xF1;os, Processing se ha transformado en una gran comunidad. Es usado en salas de clases a lo largo del mundo, en planes de estudios de artes, humanidades y ciencias de la computaci&#xF3;n y de forma profesional.</p>
 
-<p>Hace dos a&#xF1;os, Ben y Casey me hicieron una pregunta: &#xBF;c&#xF3;mo ser&#xED;a Processing si funcionara en la web? p5.js empieza con el objetivo original de Processing, hacer que programar sea accesible para artistas, dise&#xF1;adores, educadores y principiantes, y luego lo reinterpreta para la web actual usando JavaScript y HTML.</p>
+<p>Hace dos a&#xF1;os, Ben y Casey me hicieron una pregunta: &#xBF;c&#xF3;mo ser&#xED;a Processing si funcionara en la web? p5.js nace con el objetivo original de Processing, hacer que programar sea accesible para artistas, dise&#xF1;adores, educadores y principiantes, y luego lo reinterpreta para la web actual usando JavaScript y HTML.</p>
 
-<p>El desarrollo de p5.js ha sido como reunir mundos distintos. Para facilitar la transici&#xF3;n a la Web de los usuarios de la comunidad existente de Processing, seguimos la sintaxis y las convenciones de Processing tanto como fue posible. Sin embargo, p5.js est&#xE1; construido con JavaScript, mientras que Processing est&#xE1; construido con un lenguaje llamado Java. Estos dos lenguajes tienen distintos patrones y funciones, as&#xED; que en ocasiones nos tuvimos que desviar de la sintaxis familiar de Processing. Tambi&#xE9;n fue importante que p5.js pudiera ser integrado sin problemas a las existentes caracter&#xED;sticas, herramientas y estructuras de la web, para as&#xED; atraer a usuarios familiarizados con la Web, pero sin experiencia en programaci&#xF3;n creativa. Sintetizar todos estos factores fue un desaf&#xED;o, pero el objetivo de unir estas estructuras proporcion&#xF3; un camino claro a seguir en el desarrollo de p5.js.</p>
+<p>El desarrollo de p5.js ha sido como reunir mundos distintos. Para facilitar la transici&#xF3;n a la Web de los usuarios de la comunidad existente de Processing, seguimos la sintaxis y las convenciones de Processing tanto como fue posible. Sin embargo, p5.js est&#xE1; construido en JavaScript, mientras que Processing est&#xE1; construido en un lenguaje llamado Java. Estos dos lenguajes tienen distintos patrones y funciones, as&#xED; que en ocasiones nos tuvimos que alejar de la sintaxis ya familiar de Processing. Tambi&#xE9;n fue importante que p5.js pudiera ser integrado sin problemas a las existentes caracter&#xED;sticas, herramientas y estructuras de la web, para as&#xED; atraer a usuarios familiarizados con la Web, pero sin experiencia en programaci&#xF3;n creativa. Sintetizar todos estos factores fue un desaf&#xED;o, pero el objetivo de unir estas estructuras proporcion&#xF3; un camino claro a seguir en el desarrollo de p5.js.</p>
 
 <p>Una primera versi&#xF3;n beta fue lanzada en agosto del 2014. Desde ese entonces, ha sido usado e integrado a programas de estudios en todo el mundo. Existe un editor oficial de p5.js que est&#xE1; actualmente en desarrollo, y se est&#xE1; progresando en muchas nuevas caracter&#xED;sticas y bibliotecas. </p>
 
@@ -34,7 +34,7 @@
 	<p><a href="#variables">4/Variables</a>: almacena, modifica y reusa datos.</p>
 	</li>
 	<li>
-	<p><a href="#response">5/Respuesta</a>: controla e influencia programas con el rat&#xF3;n, el teclado y el toque.</p>
+	<p><a href="#response">5/Respuesta</a>: controla e influye en programas con el rat&#xF3;n, el teclado y el tacto.</p>
 	</li>
 	<li>
 	<p><a href="#translate">6/Trasladar, rotar, escalar</a>: transforma las coordenadas.</p>
@@ -66,7 +66,7 @@
 <section data-type="sect1" id="who_this_book_is_for">
 <h1>Para qui&#xE9;n es este libro</h1>
 
-<p>Este libro fue escrito para personas que quieren crear im&#xE1;genes y programas interactivos simples con una introducci&#xF3;n casual y concisa a la programaci&#xF3;n de computadores. Es para personas que quieren una ayuda para entender los miles de ejemplos de c&#xF3;digo en p5.js y los manuales de referencia disponibles en la web de forma gratuita y libre. <em>Introducci&#xF3;n a p5.js</em> no es un libro de referencia sobre programaci&#xF3;n; como el t&#xED;tulo lo sugiere, te ayudar&#xE1; a empezar. Es &#xFA;til para adolescentes, entusiastas, abuelos, y cualquier persona con inter&#xE9;s.</p>
+<p>Este libro fue escrito para personas que quieren crear im&#xE1;genes y programas interactivos simples con una introducci&#xF3;n casual y concisa a la programaci&#xF3;n de computadores. Es para personas que quieren una ayuda para entender los miles de ejemplos de c&#xF3;digo en p5.js y los manuales de referencia disponibles en la web de forma gratuita y libre. <em>Introducci&#xF3;n a p5.js</em> no es un libro de referencia sobre programaci&#xF3;n; como el t&#xED;tulo lo sugiere, te ayudar&#xE1; a empezar. Es &#xFA;til para adolescentes, adultos, entusiastas y cualquier persona interesada.</p>
 
 <p>Este libro tambi&#xE9;n es apropiado para personas con experiencia en programaci&#xF3;n que quieran aprender los conceptos b&#xE1;sicos de gr&#xE1;ficos computacionales interactivas. <em>Introducci&#xF3;n a p5.js</em> contiene t&#xE9;cnicas que pueden ser aplicadas en la creaci&#xF3;n de juegos, animaciones e interfaces.</p>
 </section>
@@ -123,7 +123,7 @@
 </section>
 
 <section data-type="sect1" id="how_to_contact_us">
-<h1>C&#xed;mo contactarnos</h1>
+<h1>C&#xf3;mo contactarnos</h1>
 
 <p>Por favor dirige tus comentarios y preguntas sobre este libro a a la editorial:</p>
 
@@ -158,7 +158,7 @@
 
 <p> Este libro surgi&#xF3; de la ense&#xF1;anza con Processing en UCLA. Chandler McWilliams ha sido instrumental en definir estas clases. Casey le agradece a los estudiantes de pregrado en el Departamento de Design Media Arts en UCLA por su energ&#xED;a y entusiasmo. Sus ayudantes del curso han sido grandes colaboradores para definir c&#xF3;mo Processing es ense&#xF1;ado. Agradecimientos a Tatsuya Saito, John Houck, Tyler Adams, Aaron Siegel, Casey Alt, Andres Colubri, Michael Kontopoulos, David Elliot, Christo Allegra, Pete Hawkes y Lauren McCarthy.</p>
 
-<p>p5.js es desarrollado por una gran comunidad de contribuyentes a lo largo del mundo. Dan Shiffman, Jason Sigal, Sam Lavigne, K.Adam White, Chandler McWilliams, Evelyn Eastmond, los miembros del grupo de trabajo de p5 en ITP, los asistentes a la primera p5.js Contributor's Conference en el Frank-Ratchye STUDIO for Creative Inquiry de Carnegie Mellon University, y los estudiantes y mentores del Processing Google Summer of Code han sido instrumentales para hacer que p5.js sea lo que es hoy. Apoyo significativo para el proyecto ha sido provisto por la Processing Foundation, NYU ITP, RISD y Bocoup. Puedes ver la lista de lista completa de contribuyentes en <a href="http://p5js.org/contribute/#contributors"><em class="hyperlink">http://p5js.org/contribute/#contributors</em></a>. Lauren tambi&#xE9;n le agradece a Kyle McDonald por su perpetuo apoyo e inspiraci&#xF3;n.</p>
+<p>p5.js es desarrollado por una gran comunidad de contribuyentes a lo largo del mundo. Dan Shiffman, Jason Sigal, Sam Lavigne, K.Adam White, Chandler McWilliams, Evelyn Eastmond, los miembros del grupo de trabajo de p5 en ITP, los asistentes a la primera p5.js Contributor's Conference en el Frank-Ratchye STUDIO for Creative Inquiry de Carnegie Mellon University, y los estudiantes y mentores del Processing Google Summer of Code han sido instrumentales para hacer que p5.js sea lo que es hoy. Apoyo significativo para el proyecto ha sido provisto por la Processing Foundation, NYU ITP, RISD y Bocoup. Puedes ver la lista de lista completa de contribuyentes en <a href="https://github.com/processing/p5.js#contributors"><em class="hyperlink">https://github.com/processing/p5.js#contributors</em></a>. Lauren tambi&#xE9;n le agradece a Kyle McDonald por su perpetuo apoyo e inspiraci&#xF3;n.</p>
 
 <p>Este libro ha sido transformado por las art&#xED;sticas ilustraciones de Taeyoon Choi. Fueron desarrolladas en parte a trav&#xE9;s de una residencia en el Frank-Ratchye STUDIO for Creative Inquiry en Carnegie Mellon University, con apoyo del programa Art Works del National Endowment for the Arts. Charlotte Stiles ayud&#xF3; tremendamente con la edici&#xF3;n de los ejemplos e im&#xE1;genes de este libro.</p>
 
