--- a/book/spanish/content/copyright.html
+++ b/book/spanish/content/copyright.html
@@ -7,12 +7,12 @@
 
 <p class="printlocation">Impreso en Estados Unidos.</p>
 
-<p class="publisher">Publicado por <span class="publishername">Processing Foundation, Inc.</span>, https://processingfoundation.org</p>
+<p class="publisher">Publicado por <span class="publishername">Processing Foundation, Inc.</span> https://processingfoundation.org</p>
 
 <!--<p>Maker Media books may be purchased for educational, business, or sales promotional use. Online editions are also available for most titles (<a href="http://safaribooksonline.com">http://safaribooksonline.com</a>). For more information, contact our corporate/institutional sales department: 800-998-9938 or <span data-type="email">corporate@oreilly.com</span>.</p>-->
 
 <ul class="stafflist">
-	<li><span class="staffrole">Diseñao de portada, versión en español:</span> Tyler Yin</li>
+	<li><span class="staffrole">Diseño de portada, versión en español:</span> Tyler Yin</li>
 	<li><span class="staffrole">Diseño interior, versión en español:</span> Casey Reas</li>
 	<li><span class="staffrole">Composición tipográfica, versión en español:</span> Tyler Yin</li>
 	<li><span class="staffrole">Ilustraciones:</span> Taeyoon Choi</li>
